Update các trang bánh sinh nhật, bánh cưới, snack cake ở trang chưa login và cả login. Chỉnh lại đường dẫn để chuyển hướng đúng. Update thêm giao diện cho trang order-lis

--- a/pages/about.html
+++ b/pages/about.html
@@ -78,7 +78,7 @@
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
                     <a href="../index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link active">About Us</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="birthday-cake-1.html" class="nav-item nav-link">Menu & Pricing</a>
                     <a href="team.html" class="nav-item nav-link">Master Chefs</a>
                     
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
