--- a/pages/birthday-cake-3-logged.html
+++ b/pages/birthday-cake-3-logged.html
@@ -72,7 +72,7 @@
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="../index.html" class="navbar-brand">
+          <a href="loggedin.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -110,23 +110,11 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <!-- Các menu đang có -->
           <div class="navbar-nav ms-auto mx-lg-auto py-0">
-            <a href="../index.html" class="nav-item nav-link active">Home</a>
-            <a href="about.html" class="nav-item nav-link">About Us</a>
-            <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-            <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-            <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Pages</a
-              >
-              <div class="dropdown-menu m-0">
-                <a href="service.html" class="dropdown-item">Our Service</a>
-                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-              </div>
-            </div>
-            <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+            <a href="loggedin.html" class="nav-item nav-link">Home</a>
+            <a href="about-logged.html" class="nav-item nav-link">About Us</a>
+            <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Menu & Pricing</a>
+            <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
+            <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
           </div>
 
           <!-- Shopping cart + Avatar menu bên phải -->
@@ -156,7 +144,7 @@
               </a>
               <div class="dropdown-menu dropdown-menu-end m-0">
                 <a href="profile.html" class="dropdown-item">Thông tin</a>
-                <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+                <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                 <div class="dropdown-divider"></div>
                 <a href="../index.html" class="dropdown-item">Đăng xuất</a>
               </div>
@@ -172,7 +160,7 @@
   <div class="container my-5 position-relative">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="loggedin.html" class="btn btn-outline-primary position-absolute m-3"
         style="top: -90px; left: -318px; z-index: 1000">
         ← Back
       </a>
@@ -186,13 +174,13 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="menuDropdown">
         <li>
-          <a class="dropdown-item" href="birthday-cake-1.html">Birthday Cake</a>
+          <a class="dropdown-item" href="birthday-cake-1-logged.html">Birthday Cake</a>
         </li>
         <li>
-          <a class="dropdown-item" href="wedding-cake-1.html">Wedding Cake</a>
+          <a class="dropdown-item" href="wedding-cake-1-logged.html">Wedding Cake</a>
         </li>
         <li>
-          <a class="dropdown-item" href="snack-cake-1.html">Snack Cake</a>
+          <a class="dropdown-item" href="snack-cake-1-logged.html">Snack Cake</a>
         </li>
       </ul>
     </div>
@@ -277,9 +265,12 @@
                           thanh tao.
                         </p>
                         <h5 class="fw-semibold">$46.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
+                        </button>
+                        <button id="addToCartBtn17" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -295,9 +286,12 @@
                           Hương caramel ngọt ngào kết hợp cùng chút mặn nhẹ từ muối biển, mang đến vị cân bằng tinh tế.
                         </p>
                         <h5 class="fw-semibold">$52.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
+                        </button>
+                        <button id="addToCartBtn18" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -313,9 +307,12 @@
                           Dành cho tín đồ socola đích thực — bánh bông lan đậm vị phủ lớp kem socola đen nguyên chất.
                         </p>
                         <h5 class="fw-semibold">$57.49</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
+                        </button>
+                        <button id="addToCartBtn19" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -332,9 +329,12 @@
                           khoái.
                         </p>
                         <h5 class="fw-semibold">$48.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
+                        </button>
+                        <button id="addToCartBtn20" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -350,9 +350,12 @@
                           Hòa quyện giữa vị chua dịu của việt quất và dâu tây, mang đến hương vị tươi mới và hấp dẫn.
                         </p>
                         <h5 class="fw-semibold">$54.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
+                        </button>
+                        <button id="addToCartBtn21" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -369,9 +372,12 @@
                           ngậy.
                         </p>
                         <h5 class="fw-semibold">$59.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
+                        </button>
+                        <button id="addToCartBtn22" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -388,9 +394,12 @@
                           trọng.
                         </p>
                         <h5 class="fw-semibold">$50.49</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
+                        </button>
+                        <button id="addToCartBtn23" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -406,9 +415,12 @@
                           Vị cam tươi mát kết hợp với hạnh nhân rang giòn, tạo nên chiếc bánh vừa thơm vừa thanh nhẹ.
                         </p>
                         <h5 class="fw-semibold">$49.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2"
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
+                        </button>
+                        <button id="addToCartBtn24" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -448,7 +460,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="../index.html" class="navbar-brand">
+            <a href="loggedin.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -487,15 +499,13 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="../index.html"><i
+                <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                <a class="text-secondary mb-2" href="about.html"><i
+                <a class="text-secondary mb-2" href="about-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About
                   Us</a>
-                <a class="text-secondary mb-2" href="menu.html"><i class="bi bi-arrow-right text-primary me-2"></i>Menu
-                  &
-                  Pricing</a>
-                <a class="text-secondary mb-2" href="contact.html"><i
+                <a class="text-secondary mb-2" href="team-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                <a class="text-secondary mb-2" href="contact-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Contact
                   Us</a>
               </div>
@@ -516,11 +526,76 @@
   </div>
   <!-- Footer End -->
 
+
+  <!-- Bootstrap Modal -->
+  <div class="modal fade" id="cartSuccessModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content text-center p-4">
+        <div class="modal-body">
+          <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem"></i>
+          <h3 class="mt-3">Thêm vào giỏ hàng thành công!</h3>
+          <p>Sản phẩm đã được thêm vào giỏ hàng của bạn.</p>
+          <button type="button" class="btn btn-primary mt-3" id="modalOkBtn">
+            OK
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
+
+
+  <!-- Script for add to cart modal -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const addToCartBtn = document.getElementById("addToCartBtn17");
+      const addToCartBtn2 = document.getElementById("addToCartBtn18");
+      const addToCartBtn3 = document.getElementById("addToCartBtn19");
+      const addToCartBtn4 = document.getElementById("addToCartBtn20");
+      const addToCartBtn5 = document.getElementById("addToCartBtn21");
+      const addToCartBtn6 = document.getElementById("addToCartBtn22");
+      const addToCartBtn7 = document.getElementById("addToCartBtn23");
+      const addToCartBtn8 = document.getElementById("addToCartBtn24");
+      const modalEl = document.getElementById("cartSuccessModal");
+      const modalOkBtn = document.getElementById("modalOkBtn");
+
+      const successModal = new bootstrap.Modal(modalEl);
+
+      addToCartBtn.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 17
+      });
+      addToCartBtn2.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 18
+      });
+      addToCartBtn3.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 19
+      });
+      addToCartBtn4.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 20
+      });
+      addToCartBtn5.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 21
+      });
+      addToCartBtn6.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 22
+      });
+      addToCartBtn7.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 23
+      });
+      addToCartBtn8.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 24
+      });
+      modalOkBtn.addEventListener("click", () => {
+        successModal.hide(); // Ẩn modal khi bấm OK
+      });
+    });
+  </script>
 </body>
 
 </html>
+
