--- a/pages/cart.html
+++ b/pages/cart.html
@@ -48,7 +48,7 @@
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="../index.html" class="navbar-brand">
+          <a href="loggedin.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -79,18 +79,11 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <!-- Các menu đang có -->
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="../index.html" class="nav-item nav-link active">Home</a>
-          <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-          <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-          <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-            <div class="dropdown-menu m-0">
-              <a href="service.html" class="dropdown-item">Our Service</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-            </div>
-          </div>
-          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="loggedin.html" class="nav-item nav-link active">Home</a>
+          <a href="about-logged.html" class="nav-item nav-link">About Us</a>
+          <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
+          <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
+          <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
         </div>
 
         <!-- Shopping cart + Avatar menu bên phải -->
@@ -127,7 +120,7 @@
   <div class="cart-container">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="birthday-cake-1.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="birthday-cake-1-logged.html" class="btn btn-outline-primary position-absolute m-3"
         style="top: -40px; left: -360px; z-index: 1000">
         ← Back
       </a>
@@ -188,6 +181,10 @@
   <div class="cart-info">
     <h5 class="mt-4 mb-3 text-uppercase">Thông tin giao hàng</h5>
     <div class="form-group mb-3">
+      <label for="recipientName" class="form-label fw-bold">Tên người nhận:</label>
+      <input type="text" id="recipientName" class="form-control" placeholder="Nhập tên người nhận" required />
+    </div>
+    <div class="form-group mb-3">
       <label for="address" class="form-label fw-bold">Địa chỉ:</label>
       <input type="text" id="address" class="form-control" placeholder="Nhập địa chỉ giao hàng" required />
     </div>
@@ -219,7 +216,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="../index.html" class="navbar-brand">
+            <a href="loggedin.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
