--- a/pages/contact-logged.html
+++ b/pages/contact-logged.html
@@ -94,10 +94,10 @@
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
                     <a href="loggedin.html" class="nav-item nav-link">Home</a>
                     <a href="about-logged.html" class="nav-item nav-link">About Us</a>
-                    <a href="menu-logged.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
                     <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
                     
-                    <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
+                    <a href="contact-logged.html" class="nav-item nav-link active">Contact Us</a>
                 </div>
 
                 <!-- Shopping cart + Avatar menu bên phải -->
@@ -116,7 +116,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
                             <a href="user-profile.html" class="dropdown-item">Thông tin</a>
-                            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+                            <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
                         </div>
