--- a/pages/team-logged.html
+++ b/pages/team-logged.html
@@ -78,7 +78,7 @@
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
                     <a href="loggedin.html" class="nav-item nav-link    ">Home</a>
                     <a href="about-logged.html" class="nav-item nav-link">About Us</a>
-                    <a href="menu-logged.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
                     <a href="team-logged.html" class="nav-item nav-link active">Master Chefs</a>
                    
                     <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
@@ -100,7 +100,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
                             <a href="user-profile.html" class="dropdown-item">Thông tin</a>
-                            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+                            <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
                         </div>
@@ -136,7 +136,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team-1.jpg" alt="">
                             <div class="team-overlay w-100 h-100 position-absolute top-50 start-50 translate-middle d-flex align-items-center justify-content-center">
                                 <div class="d-flex align-items-center justify-content-start">
                                     <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 mx-1" href="#"><i class="fab fa-twitter fw-normal"></i></a>
@@ -154,7 +154,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team-2.jpg" alt="">
                             <div class="team-overlay w-100 h-100 position-absolute top-50 start-50 translate-middle d-flex align-items-center justify-content-center">
                                 <div class="d-flex align-items-center justify-content-start">
                                     <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 mx-1" href="#"><i class="fab fa-twitter fw-normal"></i></a>
@@ -172,7 +172,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                            <img class="img-fluid w-100" src="../img/team-3.jpg" alt="">
                             <div class="team-overlay w-100 h-100 position-absolute top-50 start-50 translate-middle d-flex align-items-center justify-content-center">
                                 <div class="d-flex align-items-center justify-content-start">
                                     <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 mx-1" href="#"><i class="fab fa-twitter fw-normal"></i></a>
