--- a/pages/about-logged.html
+++ b/pages/about-logged.html
@@ -45,7 +45,7 @@
             </div>
             <div class="col-lg-4 text-center bg-primary border-inner py-3">
                 <div class="d-inline-flex align-items-center justify-content-center">
-                    <a href="../index.html" class="navbar-brand">
+                    <a href="loggedin.html" class="navbar-brand">
                         <h1 class="m-0 text-uppercase text-white"><i
                                 class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                     </a>
@@ -77,11 +77,11 @@
                 <!-- Các menu đang có -->
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
                     <a href="loggedin.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About Us</a>
-                    <a href="menu-logged.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team.html" class="nav-item nav-link">Master Chefs</a>
+                    <a href="about-logged.html" class="nav-item nav-link active">About Us</a>
+                    <a href="birthday-cake-1-logged.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
                     
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
                 </div>
 
                 <!-- Shopping cart + Avatar menu bên phải -->
@@ -100,7 +100,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
                             <a href="user-profile.html" class="dropdown-item">Thông tin</a>
-                            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+                            <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
                         </div>
@@ -224,7 +224,7 @@
             <div class="row gx-5">
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-                        <a href="../index.html" class="navbar-brand">
+                        <a href="loggedin.html" class="navbar-brand">
                             <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                         </a>
                         <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd eos duo dolore no.</p>
@@ -255,11 +255,10 @@
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="../index.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="about.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
-                                <a class="text-secondary mb-2" href="services.html"><i class="bi bi-arrow-right text-primary me-2"></i>Our Services</a>
-                                <a class="text-secondary mb-2" href="team.html"><i class="bi bi-arrow-right text-primary me-2"></i>Meet The Team</a>
-                                <a class="text-secondary" href="contact.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
+                                <a class="text-secondary mb-2" href="loggedin.html"><i class="bi bi-arrow-right text-primary me-2"></i>Home</a>
+                                <a class="text-secondary mb-2" href="about-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                                <a class="text-secondary mb-2" href="team-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                                <a class="text-secondary" href="contact-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
