--- a/pages/birthday-cake-1-logged.html
+++ b/pages/birthday-cake-1-logged.html
@@ -72,7 +72,7 @@
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="../index.html" class="navbar-brand">
+          <a href="loggedin.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -103,18 +103,11 @@
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <!-- Các menu đang có -->
         <div class="navbar-nav ms-auto mx-lg-auto py-0">
-          <a href="loggedin.html" class="nav-item nav-link active">Home</a>
-          <a href="about.html" class="nav-item nav-link">About Us</a>
-          <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
-          <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-          <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-            <div class="dropdown-menu m-0">
-              <a href="service.html" class="dropdown-item">Our Service</a>
-              <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-            </div>
-          </div>
-          <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+          <a href="loggedin.html" class="nav-item nav-link">Home</a>
+          <a href="about-logged.html" class="nav-item nav-link">About Us</a>
+          <a href="birthday-cake-1-logged.html" class="nav-item nav-link active">Menu & Pricing</a>
+          <a href="team-logged.html" class="nav-item nav-link">Master Chefs</a>
+          <a href="contact-logged.html" class="nav-item nav-link">Contact Us</a>
         </div>
 
         <!-- Shopping cart + Avatar menu bên phải -->
@@ -136,7 +129,7 @@
             </a>
             <div class="dropdown-menu dropdown-menu-end m-0">
               <a href="profile.html" class="dropdown-item">Thông tin</a>
-              <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+              <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
               <div class="dropdown-divider"></div>
               <a href="../index.html" class="dropdown-item">Đăng xuất</a>
             </div>
@@ -151,7 +144,7 @@
   <div class="container my-5 position-relative">
     <div class="position-relative">
       <!-- Nút Back -->
-      <a href="../index.html" class="btn btn-outline-primary position-absolute m-3"
+      <a href="loggedin.html" class="btn btn-outline-primary position-absolute m-3"
         style="top: -90px; left: -318px; z-index: 1000">
         ← Back
       </a>
@@ -165,13 +158,13 @@
       </button>
       <ul class="dropdown-menu" aria-labelledby="menuDropdown">
         <li>
-          <a class="dropdown-item" href="birthday-cake-1.html">Birthday Cake</a>
+          <a class="dropdown-item" href="birthday-cake-1-logged.html">Birthday Cake</a>
         </li>
         <li>
-          <a class="dropdown-item" href="wedding-cake-1.html">Wedding Cake</a>
+          <a class="dropdown-item" href="wedding-cake-1-logged.html">Wedding Cake</a>
         </li>
         <li>
-          <a class="dropdown-item" href="snack-cake-1.html">Snack Cake</a>
+          <a class="dropdown-item" href="snack-cake-1-logged.html">Snack Cake</a>
         </li>
       </ul>
     </div>
@@ -257,11 +250,11 @@
                         </p>
                         <h5 class="fw-semibold">$45.99</h5>
                         <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1.html'">
-                          Read More
+                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
+                          Chi tiết
                         </button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button id="addToCartBtn" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -278,9 +271,9 @@
                           hương vị thanh mát.
                         </p>
                         <h5 class="fw-semibold">$39.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2">Chi tiết</button>
+                        <button id="addToCartBtn2" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -297,9 +290,9 @@
                           sang trọng.
                         </p>
                         <h5 class="fw-semibold">$49.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2">Chi tiết</button>
+                        <button id="addToCartBtn3" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -317,9 +310,9 @@
                         </p>
                         <h5 class="fw-semibold">$52.99</h5>
 
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2">Chi tiết</button>
+                        <button id="addToCartBtn4" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -337,9 +330,9 @@
                         </p>
                         <h5 class="fw-semibold">$52.99</h5>
 
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2">Chi tiết</button>
+                        <button id="addToCartBtn5" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -356,9 +349,9 @@
                           tươi mát.
                         </p>
                         <h5 class="fw-semibold">$44.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2">Chi tiết</button>
+                        <button id="addToCartBtn6" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -375,9 +368,9 @@
                           bữa tiệc.
                         </p>
                         <h5 class="fw-semibold">$46.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2">Chi tiết</button>
+                        <button id="addToCartBtn7" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -394,9 +387,9 @@
                           ngọt.
                         </p>
                         <h5 class="fw-semibold">$50.99</h5>
-                        <button class="btn btn-primary mt-2">Read More</button>
-                        <button class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
+                        <button class="btn btn-primary mt-2">Chi tiết</button>
+                        <button id="addToCartBtn8" class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
                         </button>
                       </div>
                     </div>
@@ -436,7 +429,7 @@
         <div class="col-lg-4 col-md-6 mb-lg-n5">
           <div
             class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-            <a href="../index.html" class="navbar-brand">
+            <a href="loggedin.html" class="navbar-brand">
               <h1 class="m-0 text-uppercase text-white">
                 <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
               </h1>
@@ -475,15 +468,14 @@
             <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
               <h4 class="text-primary text-uppercase mb-4">Quick Links</h4>
               <div class="d-flex flex-column justify-content-start">
-                <a class="text-secondary mb-2" href="../index.html"><i
+                <a class="text-secondary mb-2" href="loggedin.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                <a class="text-secondary mb-2" href="about.html"><i
+                <a class="text-secondary mb-2" href="about-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About
                   Us</a>
-                <a class="text-secondary mb-2" href="menu.html"><i class="bi bi-arrow-right text-primary me-2"></i>Menu
-                  &
-                  Pricing</a>
-                <a class="text-secondary mb-2" href="contact.html"><i
+                <a class="text-secondary mb-2" href="team-logged.html"><i
+                    class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                <a class="text-secondary mb-2" href="contact-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Contact
                   Us</a>
               </div>
@@ -504,11 +496,74 @@
   </div>
   <!-- Footer End -->
 
+
+  <!-- Bootstrap Modal -->
+  <div class="modal fade" id="cartSuccessModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content text-center p-4">
+        <div class="modal-body">
+          <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem"></i>
+          <h3 class="mt-3">Thêm vào giỏ hàng thành công!</h3>
+          <p>Sản phẩm đã được thêm vào giỏ hàng của bạn.</p>
+          <button type="button" class="btn btn-primary mt-3" id="modalOkBtn">
+            OK
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
+
+  <!-- Script for add to cart modal -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const addToCartBtn = document.getElementById("addToCartBtn");
+      const addToCartBtn2 = document.getElementById("addToCartBtn2");
+      const addToCartBtn3 = document.getElementById("addToCartBtn3");
+      const addToCartBtn4 = document.getElementById("addToCartBtn4");
+      const addToCartBtn5 = document.getElementById("addToCartBtn5");
+      const addToCartBtn6 = document.getElementById("addToCartBtn6");
+      const addToCartBtn7 = document.getElementById("addToCartBtn7");
+      const addToCartBtn8 = document.getElementById("addToCartBtn8");
+      const modalEl = document.getElementById("cartSuccessModal");
+      const modalOkBtn = document.getElementById("modalOkBtn");
+
+      const successModal = new bootstrap.Modal(modalEl);
+
+      addToCartBtn.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 1
+      });
+      addToCartBtn2.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 2
+      });
+      addToCartBtn3.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 3
+      });
+      addToCartBtn4.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 4
+      });
+      addToCartBtn5.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 5
+      });
+      addToCartBtn6.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 6
+      });
+      addToCartBtn7.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 7
+      });
+      addToCartBtn8.addEventListener("click", () => {
+        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 8
+      });
+      modalOkBtn.addEventListener("click", () => {
+        successModal.hide(); // Ẩn modal khi bấm OK
+      });
+    });
+  </script>
 </body>
 
 </html>
