--- a/pages/contact.html
+++ b/pages/contact.html
@@ -94,7 +94,7 @@
                 <div class="navbar-nav ms-auto mx-lg-auto py-0">
                     <a href="../index.html" class="nav-item nav-link">Home</a>
                     <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="menu.html" class="nav-item nav-link">Menu & Pricing</a>
+                    <a href="birthday-cake-1.html" class="nav-item nav-link">Menu & Pricing</a>
                     <a href="team.html" class="nav-item nav-link">Master Chefs</a>
                     <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                 </div>
