--- a/pages/menu-logged.html
+++ b/pages/menu-logged.html
@@ -102,7 +102,7 @@
                         </a>
                         <div class="dropdown-menu dropdown-menu-end m-0">
                             <a href="user-profile.html" class="dropdown-item">Thông tin</a>
-                            <a href="orders.html" class="dropdown-item">Đơn hàng</a>
+                            <a href="order-list.html" class="dropdown-item">Đơn hàng</a>
                             <div class="dropdown-divider"></div>
                             <a href="../index.html" class="dropdown-item">Đăng xuất</a>
                         </div>
