--- a/pages/wedding-cake-2-logged.html
+++ b/pages/wedding-cake-2-logged.html
@@ -30,31 +30,6 @@
 
   <!-- Template Stylesheet -->
   <link href="../css/style.css" rel="stylesheet" />
-
-  <style>
-    /* Container bọc ngoài có ảnh nền */
-    .card-wrapper {
-      background: url("../img/bg.jpg") no-repeat center center;
-      background-size: cover;
-      padding: 40px;
-    }
-
-    /* Card vẫn giữ nền trắng */
-    .card {
-      background-color: #fff;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .card a {
-      text-decoration: none;
-      color: #333;
-    }
-
-    .card a:hover {
-      color: #007bff;
-    }
-  </style>
 </head>
 
 <body>
@@ -139,7 +114,6 @@
     </div>
   </nav>
   <!-- Navbar End -->
-
 
   <!-- Birthday Cakes Section -->
   <div class="container my-5 position-relative">
@@ -237,7 +211,7 @@
                   <!-- Cake 9 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/bdcake-9.jpg" class="card-img-top" alt="Birthday Cake 9" />
+                      <img src="../img/wdcake-9.jpg" class="card-img-top" alt="Birthday Cake 9" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
                           <a href="#">Bánh Sinh Nhật Matcha Kem Tươi</a>
@@ -248,12 +222,11 @@
                           thơm mát.
                         </p>
                         <h5 class="fw-semibold">$47.99</h5>
-                        <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-                          Chi tiết
+                        <button class="btn btn-primary mt-2">
+                          Read More
                         </button>
-                        <button id="addToCartBtn9" class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
                         </button>
                       </div>
                     </div>
@@ -262,7 +235,7 @@
                   <!-- Cake 10 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/bdcake-10.jpg" class="card-img-top" alt="Birthday Cake 10" />
+                      <img src="../img/wdcake-10.jpg" class="card-img-top" alt="Birthday Cake 10" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
                           <a href="#">Bánh Sinh Nhật Kem Phô Mai Việt Quất</a>
@@ -273,12 +246,11 @@
                           quyến rũ.
                         </p>
                         <h5 class="fw-semibold">$53.49</h5>
-                        <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-                          Chi tiết
+                        <button class="btn btn-primary mt-2">
+                          Read More
                         </button>
-                        <button id="addToCartBtn10" class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
                         </button>
                       </div>
                     </div>
@@ -287,7 +259,7 @@
                   <!-- Cake 11 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/bdcake-11.jpg" class="card-img-top" alt="Birthday Cake 11" />
+                      <img src="../img/wdcake-11.jpg" class="card-img-top" alt="Birthday Cake 11" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
                           <a href="#">Bánh Sinh Nhật Oreo Kem Sữa</a>
@@ -298,12 +270,11 @@
                           ngào cho mọi lứa tuổi.
                         </p>
                         <h5 class="fw-semibold">$42.99</h5>
-                        <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-                          Chi tiết
+                        <button class="btn btn-primary mt-2">
+                          Read More
                         </button>
-                        <button id="addToCartBtn11" class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
                         </button>
                       </div>
                     </div>
@@ -312,7 +283,7 @@
                   <!-- Cake 12 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/bdcake-12.jpg" class="card-img-top" alt="Birthday Cake 12" />
+                      <img src="../img/wdcake-12.jpg" class="card-img-top" alt="Birthday Cake 12" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
                           <a href="#">Bánh Sinh Nhật Kem Dừa Hạnh Nhân</a>
@@ -322,12 +293,11 @@
                           nhân rang, tạo nên chiếc bánh thơm ngon khó cưỡng.
                         </p>
                         <h5 class="fw-semibold">$48.99</h5>
-                        <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-                          Chi tiết
+                        <button class="btn btn-primary mt-2">
+                          Read More
                         </button>
-                        <button id="addToCartBtn12" class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
                         </button>
                       </div>
                     </div>
@@ -336,7 +306,7 @@
                   <!-- Cake 13 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/bdcake-13.jpg" class="card-img-top" alt="Birthday Cake 13" />
+                      <img src="../img/wdcake-13.jpeg" class="card-img-top" alt="Birthday Cake 13" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
                           <a href="#">Bánh Sinh Nhật Trà Sữa Trân Châu</a>
@@ -347,12 +317,11 @@
                           dẫn.
                         </p>
                         <h5 class="fw-semibold">$51.99</h5>
-                        <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-                          Chi tiết
+                        <button class="btn btn-primary mt-2">
+                          Read More
                         </button>
-                        <button id="addToCartBtn13" class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
                         </button>
                       </div>
                     </div>
@@ -361,7 +330,7 @@
                   <!-- Cake 14 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/bdcake-14.jpg" class="card-img-top" alt="Birthday Cake 14" />
+                      <img src="../img/wdcake-14.jpeg" class="card-img-top" alt="Birthday Cake 14" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
                           <a href="#">Bánh Sinh Nhật Dâu Tằm Kem Sữa Chua</a>
@@ -371,12 +340,11 @@
                           tươi, mang lại cảm giác thanh mát và lạ miệng.
                         </p>
                         <h5 class="fw-semibold">$49.49</h5>
-                        <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-                          Chi tiết
+                        <button class="btn btn-primary mt-2">
+                          Read More
                         </button>
-                        <button id="addToCartBtn14" class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
                         </button>
                       </div>
                     </div>
@@ -385,7 +353,7 @@
                   <!-- Cake 15 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/bdcake-15.jpg" class="card-img-top" alt="Birthday Cake 15" />
+                      <img src="../img/wdcake-15.jpeg" class="card-img-top" alt="Birthday Cake 15" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
                           <a href="#">Bánh Sinh Nhật Kem Cà Phê Espresso</a>
@@ -396,12 +364,11 @@
                           yêu cà phê.
                         </p>
                         <h5 class="fw-semibold">$55.99</h5>
-                        <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-                          Chi tiết
+                        <button class="btn btn-primary mt-2">
+                          Read More
                         </button>
-                        <button id="addToCartBtn15" class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
                         </button>
                       </div>
                     </div>
@@ -410,7 +377,7 @@
                   <!-- Cake 16 -->
                   <div class="col-md-3 col-sm-6">
                     <div class="card h-100 text-center">
-                      <img src="../img/bdcake-16.jpg" class="card-img-top" alt="Birthday Cake 16" />
+                      <img src="../img/wdcake-16.jpeg" class="card-img-top" alt="Birthday Cake 16" />
                       <div class="card-body d-flex flex-column">
                         <h6 class="fw-bold">
                           <a href="#">Bánh Sinh Nhật Kem Dâu & Socola Trắng</a>
@@ -421,12 +388,11 @@
                           bữa tiệc sinh nhật.
                         </p>
                         <h5 class="fw-semibold">$58.49</h5>
-                        <button class="btn btn-primary mt-2"
-                          onclick="window.location.href='birthday-cake-detail-1-logged.html'">
-                          Chi tiết
+                        <button class="btn btn-primary mt-2">
+                          Read More
                         </button>
-                        <button id="addToCartBtn16" class="btn btn-primary mt-2">
-                          <i class="fas fa-shopping-cart me-2"></i>Thêm vào giỏ hàng
+                        <button class="btn btn-primary mt-2">
+                          <i class="fas fa-shopping-cart me-2"></i>Add to cart
                         </button>
                       </div>
                     </div>
@@ -445,13 +411,19 @@
     <nav aria-label="Cake list pages">
       <ul class="pagination">
         <li class="page-item">
-          <a class="page-link" href="birthday-cake-1-logged.html">Previous</a>
+          <a class="page-link" href="wedding-cake-1-logged.html" tabindex="-1">Previous</a>
         </li>
-        <li class="page-item"><a class="page-link" href="birthday-cake-1-logged.html">1</a></li>
-        <li class="page-item active"><a class="page-link" href="birthday-cake-2-logged.html">2</a></li>
-        <li class="page-item"><a class="page-link" href="birthday-cake-3-logged.html">3</a></li>
         <li class="page-item">
-          <a class="page-link" href="birthday-cake-3-logged.html">Next</a>
+          <a class="page-link" href="wedding-cake-1-logged.html">1</a>
+        </li>
+        <li class="page-item active">
+          <a class="page-link" href="wedding-cake-2-logged.html">2</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="wedding-cake-3-logged.html">3</a>
+        </li>
+        <li class="page-item">
+          <a class="page-link" href="wedding-cake-3-logged.html">Next</a>
         </li>
       </ul>
     </nav>
@@ -508,8 +480,7 @@
                 <a class="text-secondary mb-2" href="about-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>About
                   Us</a>
-                <a class="text-secondary mb-2" href="team-logged.html"><i
-                    class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
+                <a class="text-secondary mb-2" href="team-logged.html"><i class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
                 <a class="text-secondary mb-2" href="contact-logged.html"><i
                     class="bi bi-arrow-right text-primary me-2"></i>Contact
                   Us</a>
@@ -531,72 +502,20 @@
   </div>
   <!-- Footer End -->
 
-  <!-- Bootstrap Modal -->
-  <div class="modal fade" id="cartSuccessModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content text-center p-4">
-        <div class="modal-body">
-          <i class="bi bi-check-circle-fill text-success" style="font-size: 4rem"></i>
-          <h3 class="mt-3">Thêm vào giỏ hàng thành công!</h3>
-          <p>Sản phẩm đã được thêm vào giỏ hàng của bạn.</p>
-          <button type="button" class="btn btn-primary mt-3" id="modalOkBtn">
-            OK
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- Scripts -->
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="js/main.js"></script>
 
-
-  <!-- Script for add to cart modal -->
+  <!-- Script -->
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const addToCartBtn = document.getElementById("addToCartBtn9");
-      const addToCartBtn2 = document.getElementById("addToCartBtn10");
-      const addToCartBtn3 = document.getElementById("addToCartBtn11");
-      const addToCartBtn4 = document.getElementById("addToCartBtn12");
-      const addToCartBtn5 = document.getElementById("addToCartBtn13");
-      const addToCartBtn6 = document.getElementById("addToCartBtn14");
-      const addToCartBtn7 = document.getElementById("addToCartBtn15");
-      const addToCartBtn8 = document.getElementById("addToCartBtn16");
-      const modalEl = document.getElementById("cartSuccessModal");
-      const modalOkBtn = document.getElementById("modalOkBtn");
+    const priceRange = document.getElementById("priceRange");
+    const priceValue = document.getElementById("priceValue");
 
-      const successModal = new bootstrap.Modal(modalEl);
-
-      addToCartBtn.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 9
-      });
-      addToCartBtn2.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 10
-      });
-      addToCartBtn3.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 11
-      });
-      addToCartBtn4.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 12
-      });
-      addToCartBtn5.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 13
-      });
-      addToCartBtn6.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 14
-      });
-      addToCartBtn7.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 15
-      });
-      addToCartBtn8.addEventListener("click", () => {
-        successModal.show(); // Hiện modal khi nhấn Add to Cart của bánh 16
-      });
-      modalOkBtn.addEventListener("click", () => {
-        successModal.hide(); // Ẩn modal khi bấm OK
-      });
+    priceRange.addEventListener("input", () => {
+      const value = parseInt(priceRange.value).toLocaleString("vi-VN");
+      priceValue.textContent = `0 ₫ - ${value} ₫`;
     });
   </script>
 </body>
